--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,14 @@
         "ext-json": "*",
         "monolog/monolog": "^2.0",
         "php": "^7.2",
+        "doctrine/orm": "^2.7",
         "php-di/php-di": "^6.1",
         "slim/psr7": "^1.1",
         "slim/slim": "^4.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "symfony/var-dumper": "^5.1"
     },
     "config": {
         "process-timeout": 0,
