--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,14 @@
         }
     ],
     "require": {
-        "ext-json": "*",
-        "monolog/monolog": "^2.0",
         "php": "^7.2",
+        "ext-json": "*",
         "doctrine/orm": "^2.7",
+        "monolog/monolog": "^2.0",
         "php-di/php-di": "^6.1",
         "slim/psr7": "^1.1",
-        "slim/slim": "^4.5"
+        "slim/slim": "^4.5",
+        "slim/twig-view": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
