--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,17 @@
         "php": "^7.2",
         "ext-json": "*",
         "doctrine/orm": "^2.7",
+        "gofabian/negotiation-middleware": "^0.1.3",
         "monolog/monolog": "^2.0",
         "php-di/php-di": "^6.1",
         "respect/validation": "^2.0",
         "slim/psr7": "^1.1",
         "slim/slim": "^4.5",
-        "slim/twig-view": "^3.0"
+        "slim/twig-view": "^3.0",
+        "tuupola/base62": "^2.1",
+        "tuupola/cors-middleware": "^1.2",
+        "tuupola/slim-basic-auth": "^3.2",
+        "tuupola/slim-jwt-auth": "^3.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
