--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "tuupola/base62": "^2.1",
         "tuupola/cors-middleware": "^1.2",
         "tuupola/slim-basic-auth": "^3.2",
-        "tuupola/slim-jwt-auth": "^3.4"
+        "tuupola/slim-jwt-auth": "^3.4",
+        "vlucas/phpdotenv": "^5.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
