Move all secret variables to .env

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 BASE_URL=http://slim-app.lndo.site
+DB_HOST=database
+DB_USER=lamp
+DB_PASS=lamp
+DB_NAME=lamp
+JWT_SECRET=FBD2F4C3DD7AE9C94B6B408A62513B58CD4A2AE18002D5CA2D1068F9
+USER=admin
+PASS=zsZ@aVn6Tq#a\e(
